@@ -1,3 +1,4 @@
+11-11-08: #943, remove "Vector" and "Scalar" view options
 10/14/08 - extend PiccoloModule so we get new-style clock controls, add piccolo-phet build dependency
 10/14/08 - delete vestigial data directory for local copy of phetcommon
 10/8/08 - change to use new PhetApplicationConfig constructor
